fix(*): fixing hiccups in spacing and colour

--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -33,13 +33,13 @@ a:focus {
 /* Banner */ 
 
 .copyrights {
-    opacity: .25;
+    opacity: .3;
 }
 
 .banner {
-    height: 22em;
+    height: 24em;
     background-image: url(../artwork/test-bkg.svg);
-    background-size: 200%;
+    background-size: 150%;
     background-position: center center;
     background-color: #58595B;
     
@@ -61,7 +61,7 @@ a:focus {
 
 .arrow {
     text-decoration: none;
-    color: white;
+    color: #DBD9D6;
     font-size: 2.5em;
     -webkit-transition: all 300ms ease-out; 
     transition: all 300ms ease-out;
@@ -167,13 +167,13 @@ a:focus {
 }
 
 .nav-bar {
-    background-color:rgba(219, 217, 214, 0.3);
+    background-color:rgba(219, 217, 214, 0.65);
     margin: 0px;
     padding-bottom: 1em;
 }
 
 .nav-bar-s {
-    background-color:rgba(219, 217, 214, 0.3);
+    background-color:rgba(219, 217, 214, 0.65);
     box-shadow: 0px 0px 20px 2px rgba(35, 31, 32, 0.18);
     margin: 0;
     padding: 0;
@@ -275,15 +275,29 @@ a:focus {
 }
 
 .img-hover {
-    border:2px solid #DBD9D6;
-    margin: 0;
     opacity: 1;
     -webkit-transition: all 300ms ease-out; 
     transition: all 300ms ease-out;
 }
 
 .img-hover:hover {
-    opacity: 1;
+    opacity: .5;
+}
+
+.colour{
+    background-color: #C86C61;
+}
+
+.colour2{
+    background-color: #071C2C;
+}
+
+.colour3{
+    background-color: #DC9189;
+}
+
+.colour4{
+    background-color: #ACC6C9;
 }
 
 .piece{
@@ -311,9 +325,34 @@ a:focus {
 
 
 /* Social Media styles */
+.iconset {
+    border-radius: 100%;
+    padding: 0px;
+    display: inline-block;
+}
+
+.iconset:hover,
+.iconset:active,
+.iconset:focus{
+    color: white;
+    background-color: #C86C61;
+    padding: 6px;
+    -webkit-transition: all 100ms ease-in-out; 
+    transition: all 300ms ease-in-out;
+}
+
+.iconset i:hover,
+.iconset i:active,
+.iconset i:focus{
+    color: white;
+    -webkit-transition: all 100ms ease-in-out; 
+    transition: all 300ms ease-in-out;
+}
+    
+    
 .icons {
     font-size: 2.5em;
-    color: white;
+    color: #111820;
     text-decoration: none;
     margin-top: .3em;
     margin-left:.25em;
@@ -322,40 +361,36 @@ a:focus {
     display: inline-block;
     height:60px;
     width: 60px;
+    border-radius: 100%;
     background-color: none;
-    -webkit-transition: all 100ms ease-out; 
-    transition: all 100ms ease-out;
 }
 
 .icons:hover,
 .icons:active,
 .icons:focus{
-     color: #B8CED0;
-    
+    color: white;
+    -webkit-transition: all 100ms ease-out; 
+    transition: all 300ms ease-out;
 }
 
-.iconset {
-    display: inline-block;
-}
-
-.iconset:hover,
-.iconset:active,
-.iconset:focus{
-    -webkit-transition: all 500ms ease-out; 
-    transition: all 500ms ease-out;
-}
     
     
 .email {
     font-size: 1em;
     text-decoration: none;
-    color:white;
+    color:#111820;
     -webkit-transition: all 300ms ease-out; 
     transition: all 300ms ease-out;
 }
 
 .email:hover {
-    color: #B8CED0;
+    color: white;
+    background-color: #C86C61;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    border-radius: 100px;
 }
 
 .link {
@@ -372,9 +407,10 @@ a:focus {
 }
 
 .cb-footer {
+    padding-top: 1em;
     color: #111820; 
     background-image: url(../artwork/test-pattern.svg);
-    background-color:rgba(219, 217, 214, .8);
+    background-color:rgba(219, 217, 214, .4);
 }
 
 /* PROJECT STYLES */
@@ -450,8 +486,30 @@ a:focus {
     fill:#B8CED0;
 }
 
+.arrow2 {
+    text-decoration: none;
+    color: #DBD9D6;
+    font-size: 2.5em;
+     padding-bottom:0px;
+    padding-right: 12px;
+    padding-left: 6px;
+    padding-top: 7px;
+    border-radius: 100%;
+    -webkit-transition: all 300ms ease-out; 
+    transition: all 300ms ease-out;
+    border-radius: 100%;  
+}
+
+
+.arrow2:hover,
+.arrow2:active,
+.arrow2:focus {
+    color:white;
+     background-color: #C86C61;
+}
+
+
 .next {
-    font-size: 3em;
     fill:white;
     position: absolute;
     top: 12px;
@@ -515,8 +573,8 @@ a:focus {
 }    
     
 .banner {
-    height: 28em;
-    background-size: 200%;
+    height: 30em;
+    background-size: 100%;
     }
     
     
@@ -540,16 +598,6 @@ a:focus {
 .wordmark {
     width: 45%;
     margin: 4em 0em 0em 0em;
-}
-      
-.img-hover {
-    opacity: .85;
-    -webkit-transition: all 300ms ease-out; 
-    transition: all 300ms ease-out;
-}
-
-.img-hover:hover {
-    opacity: 1;
 }  
     
 .only-sm {
@@ -587,7 +635,7 @@ a:focus {
 }   
     
 .banner {
-    height: 30em;
+    height: 34em;
     background-size: 100%;
     }    
     
@@ -628,7 +676,7 @@ a:focus {
     padding: 2em 10em 2em 10em;
     }
     .banner {
-        height: 30em;
+        height: 34em;
     }
 }
    
@@ -638,7 +686,7 @@ a:focus {
     padding: 2em 10em 2em 10em;
     }
     .banner {
-        height: 35em;
+        height: 40em;
     }
 }
 
